# quanfima

./: .travis.yml  LICENCE  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_3dvis.py  test_gen.py  test_pygfx_mesh.py  test_pygfx_simple.py  test_pyvista.py  test_pyvista_vol.py  test_vispy.py  test_visvis.py  test_vtk.py
data/: polymer3d_8bit_128x128x128.raw  polymer_slice.tif
docs/: Makefile  api_docs.md  make.bat
docs/source/: change_log.rst  conf.py  index.rst  modules.rst  overview.rst  quanfima.rst  quickstart.rst
quanfima/: __init__.py  morphology.py  simulation.py  utils.py  visualization.py
quanfima/orientation/: base_estimator.py  ray_cpu.py  ray_gpu.py  tensor.py
src/quanfima/: __init__.py  diameter.py  fourier.py  morphology.py  raycasting_cpu.py  raycasting_gpu.py  simulation.py  structure_tensor.py  structure_tensor_3d.py  utils.py  visualization.py
