[tool.poetry]
name = "quanfima"
version = "1.0.0"
description = "The package for morphological analysis and visualization of fibrous materials"
authors = ["Roman Shkarin <roman.v.shkarin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.4.1"
pandas = "^1.1.0"
scikit-image = "^0.18.1"
scikit-learn = "^0.24.2"
scipy = "^1.6.0"
imageio = "^2.9.0"
tensorflow = "^2.1.0"
tensorflow-probability = "~0.12.2"
pycuda = { version = "^2021.1", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = "^21.5b0"

[tool.poetry.extras]
pycuda = ["pycuda"]

[tool.poetry.urls]
"github" = "https://github.com/rshkarin/quanfima"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
